Added GroupBooksByGenre endpoint
